# h-line

./: .dockerignore  .gitignore  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
docs/: how_to_run_and_build.md
src/: main.py
src/abstract/: application_generator.py  application_name_creator.py  application_saver.py  application_sender.py
src/assets/: .env.example
src/assets/templates/: application.docx  application.html  application.md
src/config/: app.py  email_recipient.py  email_sender.py  google_analytics.py  server.py
src/core/: doc_manager.py  email_manager.py  message_factory.py  smtp_implementations.py  txt_manager.py
src/models/: __init__.py  appeal_request.py  email_errors.py  file_type.py  logging.py  smtp.py
src/ui/: main.py
src/ui/routes/: about.py  application.py  author.py  error404.py  root.py
src/ui/utils/: elements.py  models.py  style.py
src/utils/: emails.py  files.py  measurement_api.py
